[gd_scene load_steps=4 format=2]

[ext_resource path="res://world/puzzle/puzzle_one/puzzle_one.gd" type="Script" id=1]
[ext_resource path="res://world/interactive_objects/sign/Sign.tscn" type="PackedScene" id=2]
[ext_resource path="res://world/obstacles/stake/Stake.tscn" type="PackedScene" id=3]

[node name="PuzzleOne" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Sign" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( -90, 24 )
_sections_unfolded = [ "Transform" ]
type_of_sign = "1"

[node name="Sign2" parent="." index="1" instance=ExtResource( 2 )]

position = Vector2( -60, 24 )
_sections_unfolded = [ "Transform" ]
type_of_sign = "5"
correct_number = 3

[node name="Sign3" parent="." index="2" instance=ExtResource( 2 )]

position = Vector2( -30, 24 )
_sections_unfolded = [ "Transform" ]
type_of_sign = "4"
correct_number = 2

[node name="Sign4" parent="." index="3" instance=ExtResource( 2 )]

position = Vector2( 0, 24 )
_sections_unfolded = [ "Transform" ]
type_of_sign = "0"
correct_number = 5

[node name="Stake" parent="." index="4" instance=ExtResource( 3 )]

position = Vector2( 40, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Stake2" parent="." index="5" instance=ExtResource( 3 )]

position = Vector2( 65, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Stake3" parent="." index="6" instance=ExtResource( 3 )]

position = Vector2( 90, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Activate" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="correct_number_triggered" from="Sign" to="." method="_on_Sign_correct_number_triggered"]

[connection signal="incorrect_number_triggered" from="Sign" to="." method="_on_Sign_incorrect_number_triggered"]

[connection signal="correct_number_triggered" from="Sign2" to="." method="_on_Sign2_correct_number_triggered"]

[connection signal="incorrect_number_triggered" from="Sign2" to="." method="_on_Sign2_incorrect_number_triggered"]

[connection signal="correct_number_triggered" from="Sign3" to="." method="_on_Sign3_correct_number_triggered"]

[connection signal="incorrect_number_triggered" from="Sign3" to="." method="_on_Sign3_incorrect_number_triggered"]

[connection signal="correct_number_triggered" from="Sign4" to="." method="_on_Sign4_correct_number_triggered"]

[connection signal="incorrect_number_triggered" from="Sign4" to="." method="_on_Sign4_incorrect_number_triggered"]

[connection signal="timeout" from="Activate" to="." method="_on_Activate_timeout"]


